# IPPO

./: Makefile  README.md
llvm/: build-llvm.sh
src/: CMakeLists.txt
src/lib/: Analyzer.cc  Analyzer.h  CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.cc  Common.h  Config.h  PointerAnalysis.cc  PointerAnalysis.h  SecurityChecks.cc  SecurityChecks.h  SecurityOperations.cc  SecurityOperations.h  Tools.cc  Tools.h  WrapperAnalysis.cc  WrapperAnalysis.h
src/lib/PairAnalysis/: DataFlowAnalysis.cc  DifferentialCheck.cc  PairAnalysis.cc  PairAnalysis.h  PairAnalysis_Tools.cc  PathCollection.cc  ReturnValueAnalysis.cc
src/lib/configs/: auto-freed-alloc-funcs  err-funcs  err-funcs-freebsd  err-funcs-php  escape-funcs  krace-skip-funcs  member-get-funcs  pair-funcs-follower  pair-funcs-lead  refcount-funcs-dec  refcount-funcs-inc  refcount-related-funcs  test-funcs
